Major rework of internal structure to support multiple implementation classes and multiple graph categories.
git-svn-id: svn://rubyforge.org/var/svn/gratr@27 6aa1fcdd-e81e-0410-86a3-8714df8c797d

--- a/acts_as_dag/test/database.yml
+++ b/acts_as_dag/test/database.yml
@@ -6,7 +6,7 @@
 #  :dbfile: acts_as_range_plugin.sqlite3.db
 postgresql:
   :adapter: postgresql
-  :username: rick
+  :host: localhost
   :database: acts_as_dag_plugin_test
   :min_messages: ERROR
 #mysql:
