--- a/acts_as_dag/test/database.yml
+++ b/acts_as_dag/test/database.yml
@@ -4,11 +4,11 @@
 #sqlite3:
 #  :adapter: sqlite3
 #  :dbfile: acts_as_range_plugin.sqlite3.db
-postgresql:
-  :adapter: postgresql
-  :host: localhost
-  :database: acts_as_dag_plugin_test
-  :min_messages: ERROR
+test:
+  adapter: postgresql
+  host: localhost
+  database: acts_as_dag_plugin_test
+  min_messages: ERROR
 #mysql:
 #  :adapter: mysql
 #  :host: localhost
